Using dummy olv partner for no partners (#235)